--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.10.3",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.4.0",
+    "typewriter-effect": "^2.21.0",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
