--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "animate.css": "^4.1.1",
     "env-var": "^7.5.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-router-dom": "^6.23.1",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.4.0",
     "typewriter-effect": "^2.21.0",
     "uninstall": "^0.0.0"
   },
